--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,12 +24,12 @@
 
 @font-face {
     font-family: 'cooper_hewittbook';
-    src: url('/fonts/cooper/cooperhewitt-book-webfont.eot');
-    src: url('//fonts/cooper/') format('embedded-opentype'),
-         url('/fonts/cooper/cooperhewitt-book-webfont.woff2') format('woff2'),
-         url('/fonts/cooper/cooperhewitt-bookitalic-webfont.woff') format('woff'),
-         url('/fonts/cooper/cooperhewitt-light-webfont.ttf') format('truetype'),
-         url('/fonts/cooper/cooperhewitt-lightitalic-webfont.svg') format('svg');
+    src: url('/fonts/cooperhewitt-book-webfont.eot');
+    src: url('') format('embedded-opentype'),
+         url('/fonts/cooperhewitt-book-webfont.woff2') format('woff2'),
+         url('/fonts/cooperhewitt-bookitalic-webfont.woff') format('woff'),
+         url('/fonts/cooperhewitt-light-webfont.ttf') format('truetype'),
+         url('/fonts/') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -38,7 +38,7 @@
 @font-face {
     font-family: 'cooper_hewittlight';
     src: url('cooperhewitt-light-webfont.eot');
-    src: url('cooperhewitt-light-webfont.eot?#iefix') format('embedded-opentype'),
+    src: url('cooperhewitt-light-webfont.eot') format('embedded-opentype'),
          url('cooperhewitt-light-webfont.woff2') format('woff2'),
          url('cooperhewitt-light-webfont.woff') format('woff'),
          url('cooperhewitt-light-webfont.ttf') format('truetype'),
@@ -51,7 +51,7 @@
 @font-face {
     font-family: 'cooper_hewittthin';
     src: url('cooperhewitt-thin-webfont.eot');
-    src: url('cooperhewitt-thin-webfont.eot?#iefix') format('embedded-opentype'),
+    src: url('cooperhewitt-thin-webfont.eot') format('embedded-opentype'),
          url('cooperhewitt-thin-webfont.woff2') format('woff2'),
          url('cooperhewitt-thin-webfont.woff') format('woff'),
          url('cooperhewitt-thin-webfont.ttf') format('truetype'),
