--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -271,3 +271,34 @@ margin-top: 1px;
     .titre__page{
       font-family: var(--font-sans-serif);
     }
+
+    .aimez__vous{
+        width: 60%;
+        border: 2px solid rgb(235, 12, 12);
+        background-color: var(--fond-site);
+        margin-left: 10px;
+        background-color: var(--rouge-principal);
+        color: var(--fond-site);
+        padding: 12px;
+        border: none;
+        border-radius: 40px;
+        text-align: center;
+        margin-left: 20px;
+    }
+
+    .trait__aimez__vous{
+      border-top: 1px solid var(--bleu-noir);
+      margin-left: 20px;
+      margin-right: 20px;
+      margin-bottom: 10px;
+      margin-top: 1px;
+      }
+
+      .autre__articles{
+        color: var(--bleu-noir);
+        margin: 20px;
+        text-align: center;
+        font-family: var(--font-mono);
+        font-size: var(--texte-si-vous-aimez-dautres-articles);
+        font-weight: lighter;
+      }
