--- a/src/css/layout/404.css
+++ b/src/css/layout/404.css
@@ -1,7 +1,8 @@
-h1, h2, img{
+h1, h2,{
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    height: 100%;
+    
 }
+
+.img{
+    width: 100%;
+    height: 100%;}
